[package]
name = "obs_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
markdown-parser = "0.1.2"
notify = "6.0.1"
yaml-rust = "0.4.5"
tempfile = "3.7.0"

[dev-dependencies]
# tempfile = "3.7.0"
